...

bool isDescripcionValid(
    BuildContext context, String descripcion, String categoria) {
  if (descripcion.length < 15 && descripcion.isNotEmpty) {
    showSnackbar(
        context,
        "La descripción debe contener letras y tener al menos 15 caracteres",
        red);
    return false;
  }

  if (!descripcion.contains(RegExp(r'[a-zA-Z]')) && descripcion.isNotEmpty) {
    showSnackbar(
...
    if (categoryQuery.docs.isEmpty) {
      categoriasCollection.add({
        'Name': categoria,
        'Description': descripcion,
        'timestamp': FieldValue.serverTimestamp(),
      });
      showSnackbar(context, "Categoría agregada exitosamente", green);

      Navigator.push(
        context,
        MaterialPageRoute(builder: (context) => const VerCategorias()),
      );
    } else {
      showSnackbar(context, "La categoría ya existe", red);
    }
  } else {
    showSnackbar(context, "No estás logeado", red);
  }
}

...
